tests/fixtures/invalid/pow_str_bool_float.py
# Cannot call pow() with Str, Bool, Float
x = pow("hello", True, 1.0)
